add lancedb example

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 /langchain-entertainer-lambda/.venv
 /rig-entertainer-ecs/target
 /langchain-entertainer-ecs/.venv
+/rig-entertainer-lancedb-local/target
