--- a/rig-montreal-lancedb/Cargo.toml
+++ b/rig-montreal-lancedb/Cargo.toml
@@ -12,8 +12,8 @@ lambda_runtime = "0.13.0"
 lancedb = "0.10.0"
 openssl = { version = "0.10.68", features = ["vendored"]}
 reqwest = "0.12.8"
-rig-core = { version = "0.3.0" }
-rig-lancedb = { version = "0.1.0"}
+rig-core = "0.4.0"
+rig-lancedb = "0.1.1"
 serde = "1.0.213"
 serde_json = "1.0.132"
 tokio = "1.41.0"
