add langchain lancedb

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 /langchain-entertainer-lambda/.venv
 /rig-entertainer-ecs/target
 /langchain-entertainer-ecs/.venv
+/langchain-montreal-lancedb/.venv
 /rig-montreal-lancedb/target
