--- a/rig-montreal-lancedb/Cargo.toml
+++ b/rig-montreal-lancedb/Cargo.toml
@@ -16,6 +16,7 @@ rig-core = "0.4.0"
 rig-lancedb = "0.1.1"
 serde = "1.0.213"
 serde_json = "1.0.132"
+tiktoken-rs = "0.6.0"
 tokio = "1.41.0"
 tracing = "0.1.40"
 tracing-subscriber = "0.3.18"
