--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 /langchain-entertainer-lambda/.venv
 /rig-entertainer-ecs/target
 /langchain-entertainer-ecs/.venv
-/langchain-montreal-lancedb/.venv
+/langchain-montreal-lancedb/.venv-app
+/langchain-montreal-lancedb/.venv-loader
 /rig-montreal-lancedb/target
