--- a/langchain-montreal-lancedb/Dockerfile
+++ b/langchain-montreal-lancedb/Dockerfile
@@ -1,9 +1,8 @@
-FROM public.ecr.aws/lambda/python:3.10-x86_64
+FROM public.ecr.aws/lambda/python:3.12-x86_64
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
 ARG FUNCTION_NAME
-ENV FUNCTION_NAME=${FUNCTION_NAME}
 
 # Copy function code
 COPY . ${LAMBDA_TASK_ROOT}
@@ -12,4 +11,7 @@ RUN set -eux; \
     REQUIREMENTS_FILE="${FUNCTION_NAME}_requirements.txt"; \
     pip install -r "${REQUIREMENTS_FILE}"
 
-CMD [ "${FUNCTION_NAME}.handler" ]
+# Override with "loader.handler" when running loader image
+CMD [ "app.handler" ]
+
+# Local build command: docker build -t <AWS account id>.dkr.ecr.us-east-1.amazonaws.com/langchain/montreal-lancedb/<loader/app>:latest --build-arg FUNCTION_NAME=<loader/app> .
